<resources>
    <string name="app_name">Bmi Calculator</string>
    <string name="weight_metric">Weight in kg</string>

    <string name="height_metric">Height in m</string>

    <string name="weight_imperial">Weight in pounds</string>

    <string name="height_imperial">Height in inch</string>

    <string name="more_information">More information on Wikipedia</string>

    <string name="wikipedia_bmi_link">https://en.wikipedia.org/wiki/Body_mass_index</string>

    <string name="bmi_result">BMI: %s</string>

    <string name="bmi_cat_1">Very severely underweight</string>

    <string name="bmi_cat_2">Severely underweight</string>

    <string name="bmi_cat_3">Underweight</string>

    <string name="bmi_cat_4">Normal (healthy weight)</string>

    <string name="bmi_cat_5">Overweight</string>

    <string name="bmi_cat_6">Obese Class I (Moderately obese)</string>

    <string name="bmi_cat_7">Obese Class II (Severely obese)</string>

    <string name="bmi_cat_8">Obese Class III (Very severely obese)</string>

    <string name="bmi_cat_9">Obese Class IV (Morbidly Obese)</string>

    <string name="bmi_cat_10">Obese Class V (Super Obese)</string>

    <string name="bmi_cat_11">Obese Class VI (Hyper Obese)</string>

    <string name="imperial">Imperial</string>

    <string name="metric">Metric</string>

    <string name="default_unit">@string/metric</string>

    <string name="action_about">About</string>

    <string name="author">Author</string>

    <string name="help_translating_this_app">Help translating this app!</string>

    <string name="rate_in_play_store">Rate in Play Store</string>

    <string name="share_with_friends">Share with your friends</string>

    <string name="check_out">Hey, check out this app: %s\n%s</string>

    <string name="legal">Legal</string>

    <string name="license">License</string>

    <string name="privacy_policy">Privacy policy</string>


    -
    <string name="privacy_policy_content">

-<![CDATA[
    1. If you install this app via Google Play, Google will collect information about your device
    and show me them in the Google Play console. In case of a crash some information will be
    uploaded to Google. I have no control over this. Please refer to their privacy policy for details.\n
    2. If you install this app via F-Droid, I cannot see any usage data. Please refer to their privacy policy for details.\n
    3. If running a device with Auto Backup by Google, Google will upload your system of units to Google Drive: https://developer.android.com/guide/topics/data/autobackup\n
    4. You can mail me at characterdog.apps@gmail.com. In this case I and Google will know your
    e-mail address and everything your write in your mail. I will delete your mail after your issue
    has been solved or your question has been answered. Google may have a backup of the mail and not
    delete it when I do so.\n
    5. If you click a link on the About screen the websites\' operator may collect information about
    your device.\n
    6. I will not share the information with anybody else.
    ]]>
</string>
</resources>
